--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2635,6 +2635,8 @@ caption {
   position:absolute;
   bottom:10px;
   right:10px;
+  background-color:#FFF;
+  padding-left:10px;
 }
 
 #directory #users #pagination {
@@ -2647,19 +2649,21 @@ caption {
   padding: 0;
 }
 
+
+#directory .info ul {
+  margin:10px 10px 0 104px;
+  color:#909090; 
+  font-size:11px;
+}
+
 #directory .info ul li {
-  display:list-item;
   list-style-type:none;
   width:100%;
+  padding:0;
+  margin:0;
   white-space:normal;
 }
 
-#directory .info ul {
-  padding:10px 0px 4px 5px;
-  float:left;
-  color:#909090; font-size:11px;
-  width:60%;
-}
 #directory .info ul a {color:#909090; font-size:11px;}
 #directory .info ul a:hover {color:#000}
 
@@ -2691,6 +2695,8 @@ caption {
   max-height:28px;
   overflow:hidden;
   line-height: 120%;
+  float:none;
+  clear:right;
 }
 
 /*- [ directory END ] --------------------------- */
