closing search part of feature #3060 :  - facets are correctly displayed  - facets management has been simplified

--- a/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
+++ b/war-core/src/main/webapp/util/styleSheets/silverpeas_light_style.css
@@ -639,7 +639,7 @@ td.milieuOngletOn {
 #facetSearchDivId {
 	border: none;
 }
-#facetAuthor, #facetInstance {
+.facet {
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
