--- a/config-core/src/main/config/web/weblib.war/repositorySharing/generic.css
+++ b/config-core/src/main/config/web/weblib.war/repositorySharing/generic.css
@@ -65,9 +65,10 @@ ul, li, p, h1, h2 {
 	top:0;
 	left:0;
 	z-index:1;
-	width:20%;
+	width:35%;
 	height:100% !important;
 	background-color: #F5F5F5;
+	overflow:auto;
 }
 
 #explorer > ul{
@@ -80,7 +81,7 @@ ul, li, p, h1, h2 {
 
 #publications {
 	float: right;
-	width:80%;
+	width:65%;
 	height:100%;
 	font-size:11px;
 }
