--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -1,6 +1,6 @@
 /* You can override this file with your own styles */
 
-body {
+body#topBarEnabled {
   padding-top: 38px;
   margin:0;
   color:#404040;
@@ -249,21 +249,22 @@ ul.menu li a:hover {
 }
 
 ul.menu  {
+	position:absolute;
 	list-style-type:none;
 	font-family: arial;
-    left: 333px;
-	top: 65px;
+	left: 222px; 
+	top: 0;
+	margin:0;
+	padding:0;
 }
 	
 ul.menu li {
-	display: block;
-    float: left;
-	
-	}
+  display: block;
+  float: left;
+}
 
 div#banner {
-/* background: url("../images/bgheaderwinter.jpg") no-repeat scroll left top #FFFFFF; */
-background: url("../images/bgheadereasterjpg") no-repeat scroll left top #FFFFFF;
+	background: url("../images/bg_header.jpg") no-repeat scroll left top #FFFFFF;
 }
 
 a.externalLink {
@@ -283,6 +284,23 @@ a.externalLink[href^="http"] {
 .composite {
    padding-top:0;
 }
+
+#___plusone_0 {
+	width:225px !important;
+}
+
+.composite .footer .container-fluid p{
+	clear:both;
+	content: "";
+	display:block;
+	border-top: 1px solid #DDDDDD;
+    float: none;
+    padding: 10px 0;
+    text-align: center;
+	background-color:#FFF;
+}
+
+
 #banner img {
 	position:absolute;
 	left:45px;
@@ -580,15 +598,18 @@ margin:0 20px ;
 	font-weight:bold;
 }
 
-#twitter .twitter-follow-button {
-	background:url("../images/btn-twitt.png") no-repeat;
-	color:transparent;
-	width:200px;
-	height:50px;
-	margin-left:10px;
-	display:block;
-	padding-bottom:8px;
+#twitter {
+	background: url("../images/btn-twitt.png") no-repeat scroll 0pt 23px transparent;
+	color: transparent;
+	display: block;
+	height:82px;
+	margin-left: 10px;
+	padding: 0pt;
+	width: 200px;
+}
 
+#poweredBy #twitter iframe {
+    margin: 0 0 0 0;
 }
 
 /*.fb-like {
