--- a/config-core/src/main/config/web/weblib.war/skinMetal/stylesheet.css
+++ b/config-core/src/main/config/web/weblib.war/skinMetal/stylesheet.css
@@ -1,55 +1,25 @@
-/**
- * Copyright (C) 2000 - 2012 Silverpeas
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * As a special exception to the terms and conditions of version 3.0 of
- * the GPL, you may redistribute this Program in connection with Free/Libre
- * Open Source Software ("FLOSS") applications as described in Silverpeas's
- * FLOSS exception.  You should have received a copy of the text describing
- * the FLOSS exception, and it is also available here:
- * "http://www.silverpeas.org/legal/licensing"
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- */
-
 @import url("basic.css");
 
 
 /***************************** IMAGES *****************************************/
 
-#headerClassFlow {
-	background-position:top right;
-	background-repeat:none;
-}
-
 .fondDomainsBar {
-	background:#222222 url() top left  repeat-y ;/**  Fond de la colonne de gauche **/
-	padding-top: 129px;
+	background:#262827 url("imgDesign/fondNav.gif") top left  repeat-y ;/**  Fond de la colonne de gauche **/
+	padding-top: 138px;
 }
 
 #backHome {
-	background:url("") 8px 6px no-repeat ;/**  Logo pour retour Ã  l'accueil **/
+	background:url("") 8px 6px no-repeat ;/**  Logo pour retour à l'accueil **/
 	height: 115px;
     left: 0;
     top: 0;
     width: 160px;
-	z-index:120
 }
 
 #recherche {
-	background:#222222 url("imgDesign/fondRecherche.png") top left no-repeat;/**  Fond de la zone recherche **/
-	height:129px;
-	width:168px;
+	background:#212221 url("imgDesign/fondRecherche.jpg") top left no-repeat;/**  Fond de la zone recherche **/
+	height:126px;
+	width:250px;
 	position:fixed;
 	top:0;
 	left:0;
@@ -57,33 +27,36 @@
 }
 
 
-
 /***************************** COULEURS *****************************************/
 
 a:hover {
-	color:#004C99;
+	color:#AE0000;
 }
 
 #administration{
-    height: 30px;
-    left: 144px;
-	width:84px;
-	padding:0 16px 0 27px;
-    top: 8px;
-	background:transparent url(imgDesign/btnAdminsitration.png) 0 0  no-repeat;
+	background:#AE0000;
+	border:1px solid #a82f41;
+	
+}
+
+#administration a {
 	color:#FFF;
-	text-align:center;
-    line-height: 24px;
-	font-size:12px;
+	background:transparent url("imgDesign/puceAdministration.png") 0px 3px no-repeat;
+	    margin-left: -10px;
+    margin-top: -5px;
+}
+
+#administration a:hover, #administration a:focus{
+	color:#000;
 }
 
 #pdcFrame {
-	background-color:#262827;
-	color:#eaeaea;
+	background-color:#AE0000;
+	color:#222222;
 }
 
 #domainsBar a {
-	color:#eaeaea;
+	color:#777777;
 }
 
 /* fil ariane */
@@ -91,40 +64,141 @@ a:hover {
 	color: #FFF;
 }
 
+/* NAV GAUCHE */
+.spaceLevel1On .contentSpace, #contentSpacespacePerso {
+	background-color: #ececec;
+	}
+#domainsBar #spaces a:hover { 
+	color:#AE0000;
+}
+.spaceLevel1, .spaceLevel1On, 
+#domainsBar #spaces  .spaceLevel1On  .contentSpace .spaceOn .contentSpace a,
+#domainsBar #spaces .spaceLevel1 .spaceURL{
+	color:#616063;
+}
+#domainsBar #spaces .spaceLevel1 a.spaceURL:hover, 
+#domainsBar #spaces .spaceLevel1On a.spaceURL:hover, 
+#domainsBar #spaces .spaceLevel1On a.spaceURL{
+	background-color:#AE0000;
+	color:#FFF;
+}
+#domainsBar #spaces  .spaceLevel1On  .contentSpace .spaceOn a {
+	color:#AE0000;
+}
+
+#spacePerso {
+    background-color: transparent;
+    background-image: none;
+    border: 0;
+	margin-top: 15px;
+}
+#domainsBar #spaceMenuDivId #spacePerso .spaceURL {
+	background:transparent url(imgDesign/bg_perso.gif) 13px 0px  no-repeat;
+	color: #000000;
+    display: block;
+    font-size: 12px;
+    height: 85px;
+    line-height: 104px;
+    padding-left: 84px;
+    text-align: left;
+    text-transform: uppercase;
+    width: 140px;
+	
+}
+#domainsBar #spacePerso .browseComponent a:hover, 
+#domainsBar #spacePerso .browseComponent a ,
+#domainsBar #spacePerso .browseComponentActiv a
+{
+	background-image:none;
+	display:block;
+	padding-left:10px;
+	color:#FFF;
+	font-weight:100;
+	text-align:left;
+	font-size:11px;
+}
+
+#domainsBar #spacePerso .browseComponentActiv a {font-weight:bold;}
+
+#domainsBar #spacePerso .contentSpace {
+	border-right:0;
+    border-left: 2px solid #AE0000;
+    clear: both;
+    margin-left: 60px;
+    margin-top: -6px;
+    padding-top: 5px;
+	background-color:transparent;
+}
+
+#domainsBar #spacePerso .contentSpace .browseComponent {
+	text-align:left;
+}
+
+#domainsBar #spacePerso .contentSpace a{
+	padding-left:10px;}
+
+/* btn & onglet */
+.milieuBoutonV5 {
+	background-color:#AE0000;
+	border:1px solid #990404;
+}
+#domainsBar .milieuBoutonV5 a , .milieuBoutonV5 a {
+	color: #FFF;
+}
+
+.sousOnglets , .milieuOngletOn{
+	background-color:#AE0000;
+}
+.milieuOngletOn a {
+	color:#FFF;
+	font-weight:bold;
+}
+.milieuOngletOff {
+	background-color:#D6D7D9;
+}
+.milieuOngletOff a {
+	color:#666666;
+}
+.milieuBoutonV5 a:hover , .milieuOngletOff a:hover  {:
+	color: #000000;
+}
+
 /* menu que voulez-vous faire */
 #menutoggle {
-	background-color: #004C99;
-	border:1px solid #2266AA ;
+	background-color: #7A7A7B;
+	border:1px solid #5d5d5e ;
 }
 #topPage .yuimenu, #kmelia .yuimenu, #attachmentList .yuimenu{
-	background-color:#eaeaea;
-	border:1px solid #2266AA;
+	background-color:#e9e9e9;
+	border:1px solid #5d5d5e;
 }
 #topPage .yuimenu ul, #kmelia .yuimenu ul, #attachmentList .yuimenu ul {
-	border-color:#2266AA;
+	border-color:#5d5d5e;
 }
 .yuimenu a , #portletPages .yuimenu a {
-	background-color:#eaeaea;
-	color:#2266AA;
+	background-color:#e9e9e9;
+	color:#5d5d5e;
 }
 .yuimenu .yuimenubaritem-selected,
 .yuimenu .yuimenuitem-selected {
-    background-color: #004C99;
+    background-color: #F2D5D8;
 
 }
 .yuimenu a:hover, #portletPages .yuimenu  a:hover{
 	color:#FFF;
-	background-color: #004C99;
-	border-color:#004C99;
+	background-color: #5d5d5e;
+	border-color:#5d5d5e;
 }
 
 /**/
 
 #blog #titresTopics a , #blog #titresArchives a, #blog #titresLiens a , .titreCouleur{
-	color:#004C99;
+	color:#AE0000;
 
 }
-
+.txtlibform, .textePetitBold {
+	color:#444444;
+	}
 
 #myProfileFiche .action .link, #publicProfileFiche #contactCommun .link, #publicProfileFiche #allContact .link ,.txtnav, .txtbigdate, .txttitrecol{
 	color:#252122;
@@ -151,9 +225,25 @@ a:hover {
 }
 .pageNav .pageIndex {
 	background-color:transparent;
-	border-right:1px solid #004C99;
+	border-right:1px solid #AE0000;
 }
 
+button {
+	background-color:#AE0000;
+	border:1px solid #AE0000;
+	color: #fff;
+}
+
+
+
+
+.skinFieldset legend {
+		border-radius: 5px;
+			-moz-border-radius: 5px;
+			-webkit-border-radius: 5px;
+		background-color:#fff !important;
+		padding-right:20px;
+}
 
 #dNdActionLabel, #footer {color:#FFF}
 
@@ -165,124 +255,10 @@ a:hover {
     color: #fff;
 }
 
-.eventName a {  color:#004C99 !important;}
+.eventName a {  color:#AE0000 !important;}
 .eventMonth{ background-color:#FFF; color:#212322 !important;}
 .eventsView #navigation {
 	background-color:transparent;
 }
 
-/* page portlets */
-#portletPages .ui-sortable {
-    background: url("") repeat scroll 0 0 transparent;
-    border: 0;
-}
-
-#portletPages dl.sort dt {
-    background-image: url("");
-    background-color: #204396;
-    border: 0;
-}
-
-#portletPages h2.portlet-title {
-    color: white;
-    border: 0;
-}
-
-#portletPages dl.sort {
-    margin: 15px 0;
-}
-
-#portletPages div.portlet-content {
-    background-color: #EAEAEA;
-    border: 0 none;
-}
-
-/* frame */
-.hautFrame {
-    background-color: #1a1a1a;
-}
-
-.intfdcolor4 {
-    background: none repeat scroll 0 0 #EAEAEA;
-}
-
-.intfdcolor, .tableBoard {
-    background: none repeat scroll 0 0 #EAEAEA !important;
-}
-
-/* mon agenda */
-#agenda #agendaView {
-    width: 95%;
-}
-
-#agenda a{
-    color: black;
-}
-
-/* ArrayPanes */
-td.ArrayCell {
-    color: black;
-}
-
-.tableArrayPane {
-    background-color: #EAEAEA;
-}
-
-.ArrayColumn, #classifieds .tableFrame #categories .categoryTitle {
-    background-color: #204396;
-    color: #EAEAEA;
-}
-
-.ArrayColumn a {
-	color:#EAEAEA;
-}
-
-th.ArrayColumn {
-    color: #EAEAEA;
-}
-
-/* Formulaires */
-.spellText, #globalResultQueryLabel, .txtlibform, .textePetitBold, #globalResultParamDisplayLabel, .ArrayNavigation, .txtnote, .legend, .champs {
-    color: black;
-}
-
-a, #preview .publiName, .txtsublibform {
-    color: #EAEAEA;
-}
-
-/* board */
-.tableBoard a, .tableBoard p, .tableBoard b, .tableBoard span {
-    color: black;
-    margin: 0;
-    padding: 0;
-}
-
-.intfdcolor, .tableBoard {
-    color: black !important;
-    background: none repeat scroll 0 0 #EAEAEA !important;
-}
-
-/* pour la liste des publi kmelia */
-.intfdcolor4 {
-    background: none repeat scroll 0 0 #EAEAEA;
-}
-
-.listinUsers .message_list li.intfdcolor, #treeDiv1, #pagination, .newsFeed, #allContact, #identity table, #ReceiveInvitation, li.event, #navBlog, #viewPostDraft, #viewPost, #blog #blogContainer #postsList div.post, #classified-view #commentaires, #agenda #navigation, #agenda #agendaView, #agenda #footer {
-    background-color: #EAEAEA;
-}
-
-/* almanach */
-.fc-day-number {
-    color: #666;
-}
-
-/* searchResults */
-#searchGroupValues {
-   background-color: #EAEAEA;
-   margin-bottom: 5px;
-}
-
-#searchGroupValues a {
-   color: black;
-}
 
