--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -245,6 +245,27 @@ Definition des class de style Silverpeas
   margin-top:10px;
 }
 
+.principal-content-title {
+	color: #333333;
+    font-size: 130%;
+    font-weight: bold;
+	margin:0 0 10px 0;
+	padding:0;
+}
+
+.tag-presentation {
+	float:right;
+	height:30px;
+	line-height:30px;
+	background:transparent url(../icons/bg-tag-part1.png) top left no-repeat;
+	padding-left:19px;
+}
+
+.tag-presentation .tag-presentation-content {
+	background:transparent url(../icons/bg-tag-part2.png) top right no-repeat;
+	padding:0 10px;
+}
+
 .clearAll {
   clear:both;
 }
@@ -4593,14 +4614,50 @@ li.application  .applicationName {
   color: #F1790F;
 }
 
+/********************************/
+/** BackEnd domain content **/
+/*******************************/
+#domainContent #principal-content-domainContent {
+	position:relative;
+	width:100%;
+}
 
+#domainContent #link-domain-content {
+	padding-bottom:12px;
+}
 
+#domainContent .principal-content-title.sql-domain {
+	background:transparent url(../icons/component/domainSmall.gif) 0 0 no-repeat;
+	padding-left:20px;
+}
+
+#domainContent #principal-content-domainContent .tag-presentation {
+	position:absolute;
+	top:0;
+	right:0;
+}
+
+#domainContent #principal-content-domainContent .tag-presentation.limited-number-user span{
+	background:transparent url(../icons/limited-user.png) right 3px no-repeat;
+	padding-right:30px;
+	display:block;
+}
+
+#domainContent #description-domainContent {
+	border-left: 6px solid #E4E4E4;
+    color: #666666;
+    font-weight: bold;
+    padding: 8px;
+}
+
+#domainContent #number-user-group-domainContent {
+	color:#666;
+	font-size:12px;
+}
 
 /*************************************/
 /** BackEnd & FrontEnd User Panel   */
 /***********************************/
-
-
 .userPanel, .userPanel * {
   padding:0;
   margin:0;
