--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -3859,6 +3859,11 @@ img.preview-file {
   margin:0 0 0 4px;
 }
 
+img.view-file {
+  cursor:pointer;
+  margin:0 0 0 4px;
+}
+
 ul#attachmentList li.attachmentListItem .lineSize img.preview-file {
   float:inherit;
 }
