Updating metal skin

--- a/config-core/src/main/config/web/weblib.war/skinMetal/stylesheet.css
+++ b/config-core/src/main/config/web/weblib.war/skinMetal/stylesheet.css
@@ -121,7 +121,7 @@ a:hover {
     display: block;
     font-size: 12px;
     height: 85px;
-    line-height: 104px;
+    padding-top:40px;
     padding-left: 84px;
     text-align: left;
     text-transform: uppercase;
@@ -264,8 +264,11 @@ button {
 		border-radius: 5px;
 			-moz-border-radius: 5px;
 			-webkit-border-radius: 5px;
-		background-color:#fff !important;
-		padding-right:20px;
+		background-color:#AE0000 !important;
+		padding:5px 20px 5px 5px;
+		color:#FFF !important;
+		border:1px solid #2a2a2a;
+		background-position:11px 4px !important;
 }
 
 #dNdActionLabel, #footer {color:#FFF}
@@ -316,4 +319,36 @@ button {
 
 #menubar-creation-actions .menubar-creation-actions-item:hover {
     background-color: #AE0000;
+}
+
+.publicationManager .legend {
+	color:#FFF;
+}
+
+div.eventBeginDate {
+    background-image: url("imgDesign/bgCalendar.png") ;
+}
+
+.jstree-default a .jstree-icon {
+    background-image: url("imgDesign/guitare-dossier.png") ;
+	background-position:0 0 !important;
+}
+
+.jstree-0 li[rel="bin"] > a > .jstree-icon {
+    background-image: url("imgDesign/trash.png") !important;
+}
+
+.jstree-0 li[rel="tovalidate"] > a > .jstree-icon {
+	background-image: url("imgDesign/to-validate.png") !important;
+}
+.jstree a {
+
+    height: 24px !important;
+    line-height: 24px !important;
+   
+}
+
+.jstree a > ins {
+    height: 24px !important;
+    width: 24px !important;
 }
