Bug #3831 - modifying personal agenda access from portlet : - click on date : view all events of the associated day - click on event : view the clicked event

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2036,6 +2036,10 @@ a.milieuBoutonV5, .milieuBoutonV5 a,#domainsBar .milieuBoutonV5 a {
   color: #000;
 }
 
+#portletPages a.color-inherited {
+  color: inherit;
+}
+
 #portletPages .clear {
   clear: both;
   font-size: 1px;
