Feature #3639 - adding application quotas into Silverpeas backoffice for SAAS using

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -4175,6 +4175,11 @@ span.csv {
 .inlineMessage-nok {
   background-color: #F79992;
   border-color: #CE6F6F;
+  color: #666666;
+}
+
+.inlineMessage-nok a {
+  color: #444444;
 }
 
 table.pdcPositionsField {
