fixing bug #3909 adding title and description of shared files

--- a/config-core/src/main/config/web/weblib.war/repositorySharing/generic.css
+++ b/config-core/src/main/config/web/weblib.war/repositorySharing/generic.css
@@ -170,7 +170,8 @@ ul, li, p, h1, h2 {
 #publications .attachment a {
 }
 
-#publications .attachment .size {
+#publications .attachment .size,
+#publications .attachment .description {
 	color:#333;
 	display:list-item;
 }
