integrating feature #3839 enhancing identity tab on "My profile" (using fieldset)

--- a/war-core/src/main/webapp/util/styleSheets/fieldset.css
+++ b/war-core/src/main/webapp/util/styleSheets/fieldset.css
@@ -91,6 +91,10 @@ fieldset.skinFieldset {
 	padding-left:36px;
 	margin-left:5px;
 }
+
+.skinFieldset legend.without-img {
+	padding: 0px 10px;
+}
  
 .champs {
 	margin-left:180px;
