bug #4014 :  Modify the pagination mechanism: now the pagination is operated directly in the DAOs. So, a search criterion on the pagination is defined and a new list, to represent a list slice, is introduced to carry the search results matching the pagination criterion (the user profiles or the user groups)

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -4782,6 +4782,12 @@ li.application  .applicationName {
     padding: 6px 0 1px 43px;
 }
 
+#filter_userPanel .listing_filter ul li#nextGroups .filter{
+	background-image: url("../icons/arrow/arrowDownModal.png");
+    background-position: 25px 6px;
+    padding: 6px 0 1px 43px;
+}
+
 #filter_userPanel .listing_filter ul {
   overflow:auto;
   border-top:1px solid #868686;
