Feature #4142 : adding password services (including password rule management). - taking in account feature #3995 which specify that some extra rules have to be mentioned to user even if these rules are not verifiable within Silverpeas password services

--- a/war-core/src/main/webapp/util/styleSheets/silverpeas-password.css
+++ b/war-core/src/main/webapp/util/styleSheets/silverpeas-password.css
@@ -83,3 +83,14 @@
   line-height: 24px;
   color: #ec3f41;
 }
+
+.password-box-info .extraRules {
+  font-weight: normal;
+}
+
+.password-box-info .extraRules li {
+  background: url(../icons/rule/info.png) no-repeat 0 50%;
+  padding-left: 22px;
+  line-height: 24px;
+  color: #000000;
+}
