Feature #4142 : adding password services (including password rule management). - modifying rules named "At least one ..." to rules named "At least X ..." (behavior modification included) - adding sequential character forbidden password rule - adding combination password rule mechanism

--- a/war-core/src/main/webapp/util/styleSheets/silverpeas-password.css
+++ b/war-core/src/main/webapp/util/styleSheets/silverpeas-password.css
@@ -60,7 +60,13 @@
   margin: 0;
   padding: 0;
   list-style-type: none;
-  text-align: left
+  text-align: left;
+}
+
+.password-box-info .combined {
+  padding-left: 37px;
+  line-height: 18px;
+  color: #a0a0a0;
 }
 
 .password-box-info .info {
@@ -77,6 +83,13 @@
   color: #3a7d34;
 }
 
+.password-box-info .combined.success {
+  background: none;
+  padding-left: 37px;
+  line-height: 18px;
+  color: #000000;
+}
+
 .password-box-info .error {
   background: url(../icons/rule/error.png) no-repeat 0 50%;
   padding-left: 22px;
@@ -86,6 +99,7 @@
 
 .password-box-info .extraRules {
   font-weight: normal;
+  text-align: left;
 }
 
 .password-box-info .extraRules li {
